--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -128,6 +128,11 @@
                         </div>
 
                         <div class="col-sm">
+                            <label for="parentPromptId">Parent Prompt ID</label>
+                            <input type="text" class="form-control" id="parentPromptId" name="parent_prompt_id" placeholder="Enter parent prompt ID">
+                        </div>
+
+                        <div class="col-sm">
                             <button type="button" class="btn btn-primary" id="createButton">Submit</button>
                         </div>
 
@@ -143,6 +148,7 @@
                         let formPromptContent = $('#promptContent').val();
                         let formPromptVariables = $('#promptVariables').val();
                         let formDesignedFor = $('#designedFor').val();
+                        let formParentPromptId = $('#parentPromptId').val();
 
                         if (formName === "" || formPromptContent === "" || formPromptVariables === "" || formDesignedFor === "") {
                             alert("Please fill out all fields to create prompt");
@@ -153,9 +159,13 @@
                             name: formName,
                             prompt_content: formPromptContent,
                             prompt_variables: formPromptVariables,
-                            designed_for: formDesignedFor
+                            designed_for: formDesignedFor,
+                            parent_prompt_id: formParentPromptId
                         };
 
+                        if (formParentPromptId === "") {
+                            delete formData.parent_prompt_id;
+                        }
 
                         $.ajax({
                             url: '/prompt',
@@ -248,6 +258,11 @@
                     </div>
 
                     <div class="col-sm">
+                        <label for="updateParentPromptId">Parent Prompt ID</label>
+                        <input type="text" class="form-control" id="updateParentPromptId" name="update_parent_prompt_id" placeholder="Enter parent prompt ID">
+                    </div>
+
+                    <div class="col-sm">
                         <button type="button" class="btn btn-primary" id="updateButton">Update</button>
                     </div>
 
@@ -270,25 +285,34 @@
                         let updatePromptContent = $('#updatePromptContent').val();
                         let updatePromptVariables = $('#updatePromptVariables').val();
                         let updateDesignedFor = $('#updateDesignedFor').val();
+                        let updateParentPromptId = $('#updateParentPromptId').val();
 
                         let formData = {
                             name: updateName,
                             prompt_content: updatePromptContent,
                             prompt_variables: updatePromptVariables,
-                            designed_for: updateDesignedFor
+                            designed_for: updateDesignedFor,
+                            parent_prompt_id: updateParentPromptId
                         };
 
                         if (updateName === "") {
                             delete formData.name;
                         }
+
                         if (updatePromptContent === "") {
                             delete formData.prompt_content;
                         }
+
                         if (updatePromptVariables === "") {
                             delete formData.prompt_variables;
                         }
+
                         if (updateDesignedFor === "") {
                             delete formData.designed_for;
+                        }
+
+                        if (updateParentPromptId === "") {
+                            delete formData.parent_prompt_id;
                         }
 
                         $.ajax({
@@ -352,6 +376,7 @@
                         $('#promptContent').val(data[0].prompt_content);
                         $('#promptVariables').val(data[0].prompt_variables);
                         $('#designedFor').val(data[0].designed_for);
+                        $('#parentPromptId').val(data[0].id);
                     },
                     error: function(xhr, status, error) {
                         $('#results').html("Issue getting prompt infor to inherit. Error: " + error);
