--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -384,31 +384,70 @@
         </div>
 
         <script>
-            //Adding event listener to the Inherit buttons in the results table
+            //Adding event listener to the buttons in the results table
             $('#results').on('click', 'button.btn-action', function() {
                 let id = $(this).data('id');
-                console.log('Button with ID ' + id + ' was clicked');
-                alert('Inherit button clicked for ID ' + id);
+                
+                let action = $(this).data('action');
+                if (action === 'delete') {
+                    $.ajax({
+                        url: '/prompt/' + id,
+                        type: 'DELETE',
+                        success: function(data) {
+                            console.log('Success:', data);
+                            alert('Prompt deleted successfully');
+                        },
+                        error: function(xhr, status, error) {
+                            $('#results').html("Error: " + error);
+                        }
+                    });
+                    return;
+                } else if (action == 'update') {
+                    //Open the update prompt section
+                    $('#updatePromptSection').collapse('show');
 
-                //Open the create prompt section
-                $('#createPromptSection').collapse('show');
+                    //Get the prompt data for the selected ID and fill in the form fields
+                    $.ajax({
+                        url: '/prompt/' + id,
+                        type: 'GET',
+                        success: function(data) {
+                            console.log('Success:', data);
+                            $('#updateId').val(data[0].id);
+                            $('#updateName').val(data[0].name);
+                            $('#updatePromptContent').val(data[0].prompt_content);
+                            $('#updatePromptVariables').val(data[0].prompt_variables);
+                            $('#updateDesignedFor').val(data[0].designed_for);
+                            $('#updateParentPromptId').val(data[0].parent_prompt_id);
+                        },
+                        error: function(xhr, status, error) {
+                            $('#results').html("Issue getting prompt infor to update. Error: " + error);
+                        }
+                    });
+                    return;
+                } else if (action == 'inherit') {
+                    //Open the create prompt section
+                    $('#createPromptSection').collapse('show');
 
-                //Get the prompt data for the selected ID and fill in the form fields
-                $.ajax({
-                    url: '/prompt/' + id,
-                    type: 'GET',
-                    success: function(data) {
-                        console.log('Success:', data);
-                        $('#name').val(data[0].name);
-                        $('#promptContent').val(data[0].prompt_content);
-                        $('#promptVariables').val(data[0].prompt_variables);
-                        $('#designedFor').val(data[0].designed_for);
-                        $('#parentPromptId').val(data[0].id);
-                    },
-                    error: function(xhr, status, error) {
-                        $('#results').html("Issue getting prompt infor to inherit. Error: " + error);
-                    }
-                });
+                    //Get the prompt data for the selected ID and fill in the form fields
+                    $.ajax({
+                        url: '/prompt/' + id,
+                        type: 'GET',
+                        success: function(data) {
+                            console.log('Success:', data);
+                            $('#name').val(data[0].name);
+                            $('#promptContent').val(data[0].prompt_content);
+                            $('#promptVariables').val(data[0].prompt_variables);
+                            $('#designedFor').val(data[0].designed_for);
+                            $('#parentPromptId').val(data[0].id);
+                        },
+                        error: function(xhr, status, error) {
+                            $('#results').html("Issue getting prompt infor to inherit. Error: " + error);
+                        }
+                    });
+                    return;
+                } else {
+                    alert("Invalid action");
+                }
             });
             
             
@@ -425,7 +464,7 @@
                 Object.keys(jsonData[0]).forEach(key => {
                     tableHtml += `<th>${key}</th>`;
                 });
-                tableHtml += "<th>Inherit Prompt</th></tr>";
+                tableHtml += "<th>Inherit Prompt</th><th>Update Prompt</th><th>Delete Prompt</th></tr>";
 
                 // Populate the table rows with the JSON data
                 jsonData.forEach(item => {
@@ -433,7 +472,11 @@
                     Object.values(item).forEach(value => {
                         tableHtml += `<td>${value}</td>`;
                     });
-                    tableHtml += "<td><button type='button' class='btn btn-primary btn-action' data-id='" + item.id + "'>Inherit</button></td></tr>";
+                    // Add buttons for inheriting, updating, and deleting prompts
+                    tableHtml += "<td><button type='button' class='btn btn-primary btn-action' data-id='" + item.id + "' data-action='inherit'>Inherit</button></td>";
+                    tableHtml += "<td><button type='button' class='btn btn-primary btn-action' data-id='" + item.id + "' data-action='update'>Update</button></td>";
+                    tableHtml += "<td><button type='button' class='btn btn-primary btn-action' data-id='" + item.id + "' data-action='delete'>Delete</button></td>";
+                    tableHtml += "</tr>";
                 });
 
                 // Close the table tags
