Another small fix

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -511,7 +511,7 @@
                     tableHtml += "<td>" + item.prompt_content + "</td>";
 
                     // Add buttons for inheriting, updating, and deleting prompts
-                    addButtonsToTable(item);
+                    tableHtml += addButtonsToTable(item);
 
                     tableHtml += "</tr>";
                 });
