--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -414,6 +414,9 @@
 
             //Adding event listener to the buttons in the results table
             $('#results').on('click', 'button.btn-action', function() {
+                // Scroll to the top of the page
+                window.scrollTo(0, 0);
+
                 let id = $(this).data('id');
                 
                 let action = $(this).data('action');
