Minor fix for overlapping input form ids

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -104,12 +104,12 @@
 
                     <div class="col-sm">
                         <label for="promptContent">Prompt Content</label>
-                        <textarea class="form-control" id="promptContent" name="prompt_content" rows="1" placeholder="Enter prompt content"></textarea>
+                        <textarea class="form-control" id="runPromptContent" name="run_prompt_content" rows="1" placeholder="Enter prompt content"></textarea>
                     </div>
 
                     <div class="col-sm">
                         <label for="promptVariables">Prompt Variables</label>
-                        <input type="text" class="form-control" id="promptVariables" name="prompt_variables" placeholder="Enter prompt variables">
+                        <input type="text" class="form-control" id="runPromptVariables" name="run_prompt_variables" placeholder="Enter prompt variables">
                     </div>
 
                     <div class="col-sm">
